# HUAWEI-2024-Challenge

./: .gitignore  CMakeLists.txt  Judge.txt  README.md  _CodeCraft_2024_Replay.exe - 快捷方式.lnk  __Tool_Compress_zip.bat  __Tool_Run.bat  __Tool_Run2.bat  __Tool_Run_.bat  _log.txt  _main  _main.cpp  classBerth.cpp  classBerth.hpp  classBoat.hpp  classCommand.hpp  classGoods.cpp  classGoods.hpp  classMap.cpp  classMap.hpp  classRobot.cpp  classRobot.hpp  constList.hpp  log.txt  main.cpp  main_.cpp  player.lnk  replay.lnk  run_simple_demo.bat  solve1.hpp
Judge/: World_step.cpp  main.cpp  random_test.cpp
__FIRST_ROUND/: CMakeLists.txt  __Tool_Run_map1.bat  __Tool_Run_map2.bat  _log.txt  replay.lnk
__FIRST_ROUND/Judge/: World_World.cpp  World_new_item.cpp
__FIRST_ROUND/include/: classBerth.hpp  classMap.hpp  classRobot.hpp  classSystem.hpp  (+2 more)
boat_test/: main.cpp
include/: InterAction.hpp  System.hpp  classBerth.hpp  classBoat.hpp  classCommand.hpp  classGoods.hpp  classMap.hpp  classRobot.hpp  classSystem.hpp  constList.hpp  constant.hpp  sdk.cpp  sdk.hpp  solve1.hpp  solve2.hpp
replay/: 2024-03-08.14.52.37.rep  2024-03-08.14.52.57.rep  2024-03-08.14.54.39.rep  2024-03-08.14.55.56.rep  2024-03-08.14.57.23.rep  2024-03-08.14.58.14.rep  2024-03-08.15.04.19.rep  2024-03-08.15.06.28.rep  2024-03-08.15.07.00.rep  2024-03-08.18.32.12.rep  2024-03-09.09.52.11.rep  2024-03-09.11.25.40.rep  2024-03-09.11.41.14.rep  2024-03-09.13.01.09.rep  2024-03-09.13.12.28.rep  2024-03-09.13.12.34.rep
src/: classBerth.cpp  classBoat.cpp  classMap.cpp  classRobot.cpp  classSystem.cpp
(+13 files in other folders)
